--- a/Backend/package.json
+++ b/Backend/package.json
@@ -17,6 +17,8 @@
   },
   "dependencies": {
     "@prisma/client": "^6.4.1",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
