--- a/Backend/package.json
+++ b/Backend/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/express": "^5.0.0",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.13.9",
     "nodemon": "^3.1.9",
     "prisma": "^6.4.1",
@@ -21,7 +23,6 @@
     "@prisma/client": "^6.4.1",
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
-    "@types/express": "^5.0.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
