a sexy ai connected to sexy cloudinary

--- a/AI/.env
+++ b/AI/.env
@@ -1,6 +1,1 @@
-CLOUD_NAME=dwa4h99wx
-API_KEY=517952286817428
-API_SECRET=Wyrc2VMRVjLfigC7Sbn0IxaH1Bs
-
-
-UPLOAD_PRESET=Eduempower_test
+BACKEND_URL=http://localhost:5000
