--- a/AI/.env
+++ b/AI/.env
@@ -1,1 +1,4 @@
-BACKEND_URL=http://localhost:5000
+
+# Database Connection
+DATABASE_URL="postgresql://neondb_owner:npg_3xoFhEm1cLav@ep-small-rain-a1qhgkay-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require"
+
