--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,12 +13,14 @@
     "@clerk/clerk-react": "^5.24.1",
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
+    "@supabase/supabase-js": "^2.49.3",
     "@tailwindcss/vite": "^4.0.0",
     "axios": "^1.8.3",
     "framer-motion": "^12.0.5",
     "lucide-react": "^0.474.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-error-boundary": "^5.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.3.0",
     "react-toastify": "^11.0.5",
