--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -19,6 +19,7 @@
     "framer-motion": "^12.0.5",
     "lucide-react": "^0.474.0",
     "react": "^18.3.1",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
     "react-error-boundary": "^5.0.0",
     "react-icons": "^5.5.0",
