A SUPER LEVEL CLEAR LOGICS

--- a/AI/.env
+++ b/AI/.env
@@ -1,6 +1,5 @@
-
-# Database Connection
-
 DATABASE_URL="postgresql://neondb_owner:npg_3xoFhEm1cLav@ep-small-rain-a1qhgkay-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require"
+BACKEND_API_URL="http://localhost:3000/api/students/"
+RANKING_API_URL="http://localhost:3000/api/ranking"
+APPLICATIONS_URL="http://localhost:3000/api/applications"
 
-BACKEND_API_URL="http://localhost:5000/api/students"
