--- a/Backend/package.json
+++ b/Backend/package.json
@@ -31,6 +31,7 @@
     "express-validator": "^7.2.1",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
+    "razorpay": "^2.9.6",
     "zod": "^3.24.2"
   }
 }
