--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -16,12 +16,14 @@
     "@supabase/supabase-js": "^2.49.3",
     "@tailwindcss/vite": "^4.0.0",
     "axios": "^1.8.3",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^12.0.5",
     "lucide-react": "^0.474.0",
     "react": "^18.3.1",
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
     "react-error-boundary": "^5.0.0",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.3.0",
     "react-toastify": "^11.0.5",
