--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -16,6 +16,7 @@
     "@supabase/supabase-js": "^2.49.3",
     "@tailwindcss/vite": "^4.0.0",
     "axios": "^1.8.3",
+    "canvas-confetti": "^1.9.3",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^12.0.5",
     "lucide-react": "^0.474.0",
