--- a/Backend/package.json
+++ b/Backend/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@prisma/client": "^6.5.0",
     "@types/bcrypt": "^5.0.2",
+    "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
     "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
