--- a/AI/.env
+++ b/AI/.env
@@ -2,4 +2,5 @@ DATABASE_URL="postgresql://neondb_owner:npg_3xoFhEm1cLav@ep-small-rain-a1qhgkay-
 BACKEND_API_URL="http://localhost:3000/api/students/"
 RANKING_API_URL="http://localhost:3000/api/ranking"
 APPLICATIONS_URL="http://localhost:3000/api/applications"
+GOOGLE_API_KEY=AIzaSyDLDSSp-JC074ETCP1egoq_EIJviHbFboQ
 
