--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,59 +1,59 @@
-name: Fullstack CI Check 
+# name: Fullstack CI Check 
 
-on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+# on:
+#   push:
+#     branches: [ main ]
+#   pull_request:
+#     branches: [ main ]
 
-jobs:
-  backend:
-    name: Backend CI
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./Backend
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+# jobs:
+#   backend:
+#     name: Backend CI
+#     runs-on: ubuntu-latest
+#     defaults:
+#       run:
+#         working-directory: ./Backend
+#     steps:
+#       - name: Checkout repository
+#         uses: actions/checkout@v3
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '18'
+#       - name: Set up Node.js
+#         uses: actions/setup-node@v3
+#         with:
+#           node-version: '18'
 
-      - name: Install dependencies
-        run: npm install
+#       - name: Install dependencies
+#         run: npm install
 
-      - name: Generate Prisma Client
-        run: npx prisma generate
+#       - name: Generate Prisma Client
+#         run: npx prisma generate
 
-      - name: Run backend
-        run: npm run dev &
+#       - name: Run backend
+#         run: npm run dev &
         
-      - name: Wait for backend to start
-        run: sleep 10
+#       - name: Wait for backend to start
+#         run: sleep 10
 
-  frontend:
-    name: Frontend CI
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./Frontend
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+#   frontend:
+#     name: Frontend CI
+#     runs-on: ubuntu-latest
+#     defaults:
+#       run:
+#         working-directory: ./Frontend
+#     steps:
+#       - name: Checkout repository
+#         uses: actions/checkout@v3
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '18'
+#       - name: Set up Node.js
+#         uses: actions/setup-node@v3
+#         with:
+#           node-version: '18'
 
-      - name: Install dependencies
-        run: npm install
+#       - name: Install dependencies
+#         run: npm install
 
-      - name: Run frontend
-        run: npm run dev &
+#       - name: Run frontend
+#         run: npm run dev &
 
-      - name: Wait for frontend to start
-        run: sleep 10
+#       - name: Wait for frontend to start
+#         run: sleep 10
